Diverses modifications (Accueil, Inscription, Connexion, Navbar...) + Ajout de Firebase Hosting (GitHub non configuré

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="src/assets/logo.png" />
+    <link rel="icon" href="src/assets/Icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Form&Chill</title>
   </head>
   <body style="background-color: white;">
     <div id="app"></div>
